# ECL-Server

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  ECL_AUTH_BACKEND_PROMPT.md  Makefile  Procfile  Procfile.dev  Procfile.prod  README.md  alembic.ini  celerybeat-schedule  pyproject.toml
.cursor/rules/: ecl-backend.mdc
app/: __init__.py  config.py  database.py  dependencies.py  main.py  routers.py
app/core/: cache.py  db_hooks.py  email.py  email_dispatch.py  email_task_utils.py  enums.py  exceptions.py  hibp.py  limiter.py  logging.py  middleware.py  pagination.py  redis_ssl.py  run_enums.py  security.py  storage.py
app/engine/: __init__.py  bulk_insert.py  ead_engine.py  excel_writer.py  format_utils.py  lgd_engine.py  pd_engine.py
app/engine/validators/: __init__.py  base.py  cross_file_validator.py  (+3 more)
app/tasks/: celery_app.py  cleanup_tasks.py  compute_tasks.py  email_tasks.py
app/templates/: base_email.html  demo_request.html  invite.html  password_changed.html  reset_password.html  verify_email.html  welcome.html
docker/: Dockerfile  docker-compose.test.yml  docker-compose.yml
docs/: EMAIL_DIAGNOSIS_PROMPT.md
migrations/: env.py
migrations/versions/: 0001_initial_auth_schema.py  0002_segments_collateral_audit_blacklist_totp.py  0003_add_onboarding_columns.py  0004_runs_uploads_pd_lgd_ead_results.py  0005_management_layer.py  2eeb67246638_add_email_outbox_table.py  a1b2c3d4e5f6_add_user_notifications_table.py
scripts/: clean_db.py  dev.sh  generate_keys.py  generate_templates.py  generate_test_data.py  seed_dev_data.py  seed_superadmin.py  seed_test_workspace.py  start_production.sh  start_worker.sh  stop_dev.sh
test_data/: EAD_2025_03.xlsx  LGD_2025_03.xlsx  PD_2025_Jan_Feb.xlsx  PD_2025_Mar_Apr.xlsx  README.md
tests/: conftest.py  test_email_smoke.py  test_engine_lgd.py  test_engine_pd.py  test_format_utils.py  test_runs_scoping.py  test_storage.py  test_tenant_isolation.py  test_validators.py
tests/test_auth/: test_login.py  test_register.py
tests/test_core/: test_hibp.py  test_security.py
(+58 files in other folders)
