[project]
name = "ecl-backend"
version = "1.0.0"
description = "ECL Platform API — Auth Module"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "gunicorn>=22.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.3",
    "email-validator>=2.1",
    "argon2-cffi>=23.1",
    "python-jose[cryptography]>=3.3",
    "cryptography>=42.0",
    "slowapi>=0.1.9",
    "redis[hiredis]>=5.0",
    "celery[redis]>=5.4",
    "flower>=2.0",
    "fastapi-mail>=1.4",
    "jinja2>=3.1",
    "httpx>=0.27",
    "structlog>=24.0",
    "sentry-sdk[fastapi]>=2.0",
    "prometheus-fastapi-instrumentator>=7.0",
    "python-ulid>=3.0",
    "pytz>=2024.1",
    "user-agents>=2.2",
    "starlette-csrf>=1.4.7",
    "pyotp>=2.9.0",
    "qrcode[pil]>=8.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "numpy-financial>=1.0",
    "openpyxl>=3.1",
    "xlsxwriter>=3.2",
    "aiobotocore>=2.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "faker>=25.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "bandit>=1.7",
    "types-aiobotocore-s3>=2.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["celery.*", "factory.*", "user_agents.*", "slowapi.*", "aiobotocore.*", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "integration: tests requiring MinIO, moto, or other external services",
]
